@@ -10,6 +10,7 @@ cm4all-beng-proxy (0.5.15) unstable; urgency=low
   * file-handler: read ETag from xattr
   * pipe: generate new ETag for piped resource
   * session: purge sessions when shared memory is full
+  * handler: don't enforce sessions for filtered responses
 
  --
 
